# sclean

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
src/: cleaner.rs  config.rs  error.rs  lib.rs  main.rs
systemd/: sclean.service  sclean.timer
