[package]
name = "sclean"
version = "0.4.0"
edition = "2021"
description = "A lightweight system cleanup utility for Linux"
license = "MIT"
repository = "https://github.com/ismail/simpler"
readme = "README.md"
keywords = ["cleaner", "system", "cache", "temp", "linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "2"
dirs = "5"
indicatif = "0.18"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termsize = "0.1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
